Dark mode & bugfixes

--- a/app/pages/css/builder.css
+++ b/app/pages/css/builder.css
@@ -4,6 +4,7 @@
   padding: 1%;
   background: var(--regiment-item-backround-color);
   border-radius: var(--border-radius);
+  color: var(--white-2);
   margin-bottom: .5em;
   position: relative;
   width: 100%;
